--- a/FitnessApp/Pages/FetchData.razor
+++ b/FitnessApp/Pages/FetchData.razor
@@ -1,48 +1,26 @@
-﻿@page "/fetchdata"
+﻿@page "/entry"
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>LogIn</PageTitle>
 
 @using FitnessApp.Data
-@inject WeatherForecastService ForecastService
 
-<h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from a service.</p>
+<CascadingAuthenticationState>
+    <nav>
+        <ul>
+            <AuthorizeView Roles="Admin">
+                <li><NavLink href="/admin">Admin Dashboard</NavLink></li>
+            </AuthorizeView>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+            <AuthorizeView Roles="User">
+                <li><NavLink href="/dashboard">My Dashboard</NavLink></li>
+            </AuthorizeView>
+
+            <li><NavLink href="/logout">Logout</NavLink></li>
+        </ul>
+    </nav>
+</CascadingAuthenticationState>
 
 @code {
-    private WeatherForecast[]? forecasts;
 
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-    }
 }
