--- a/FitnessApp/Shared/NavMenu.razor
+++ b/FitnessApp/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using FitnessApp
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">FitnessApp</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -7,25 +9,56 @@
     </div>
 </div>
 
+<CascadingAuthenticationState>
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="ticketmanager">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> TicketManager
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="clienttickets">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> ClientTickets
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="entry">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Entry
+            </NavLink>
+        </div>
+
+        <AuthorizeView Roles="Admin">
+            <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="extra">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Extra
+                    </NavLink>
+            </div>
+        </AuthorizeView>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logout">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> LogOut
             </NavLink>
         </div>
     </nav>
 </div>
+</CascadingAuthenticationState>
 
 @code {
     private bool collapseNavMenu = true;
