--- a/FitnessApp/Shared/NavMenu.razor
+++ b/FitnessApp/Shared/NavMenu.razor
@@ -20,8 +20,13 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ticket_type">
+                <span class="oi oi-plus" aria-hidden="true"></span> New Ticket Type
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> New Ticket Type
             </NavLink>
         </div>
 
