--- a/FitnessApp/Pages/ClientsPage.razor
+++ b/FitnessApp/Pages/ClientsPage.razor
@@ -1,6 +1,6 @@
-﻿@page "/ticket_type"
+﻿@page "/clients"
 
-<PageTitle>New ticket type</PageTitle>
+<PageTitle>Client</PageTitle>
 
 @using FitnessApiClient.Api
 @using FitnessApiClient.Context
@@ -11,56 +11,53 @@
 @using Microsoft.AspNetCore.Components.Web
 @using FluentValidation
 
+@inject IJSRuntime JSRuntime
+
 @if (updateSuccess)
 {
     <div class="alert alert-success">Update was successful!</div>
 }
-
-@if (failed)
+else if (failed)
 {
     <div class="alert alert-danger">Failed!</div>
 }
 
 <Tabs>
-    <Tab Title="Add Ticket Type">
-        <h1>Add Ticket Type</h1>
-        <EditForm Model="@newTicketType" OnValidSubmit="@HandleValidSubmit">
+    <Tab Title="Manage Clients">
+        <h1>- Manage Clients -</h1>
+        <EditForm Model="@newClient" OnValidSubmit="@HandleValidSubmit">
             <DataAnnotationsValidator />
             <ValidationSummary />
             
             <div class="form-group">
                 <label for="Name">Name:</label>
-                <InputText class="form-control" id="Name" @bind-Value="newTicketType.Name" placeholder="Ticket name" />
+                <InputText class="form-control" id="Name" @bind-Value="newClient.Name" placeholder="Client name" />
             </div>
             <div class="form-group">
-                <label for="Price">Price:</label>
-                <InputNumber class="form-control" id="Price" @bind-Value="newTicketType.Price" />
+                <label for="Phone">Phone:</label>
+                <InputText class="form-control" id="Phone" @bind-Value="newClient.Phone" placeholder="+40 123456789"/>
             </div>
             <div class="form-group">
-                <label for="ValidityDays">Validity Days:</label>
-                <InputNumber class="form-control" id="ValidityDays" @bind-Value="newTicketType.ValidityDays" />
+                <label for="Email">Email:</label>
+                <InputText class="form-control" id="Email" @bind-Value="newClient.Email" placeholder="example@domain.tld"/>
             </div>
             <div class="form-group">
-                <label for="ValidityEntries">Validity Entries:</label>
-                <InputNumber class="form-control" id="ValidityEntries" @bind-Value="newTicketType.ValidityEntries" />
+                <label for="CNP">CNP:</label>
+                <InputText class="form-control" id="CNP" @bind-Value="newClient.CNP" placeholder = "5981458173264"/>
             </div>
             <div class="form-group">
-                <label for="ArenaId">Arena Id:</label>
-                <InputNumber class="form-control" id="ArenaId" @bind-Value="newTicketType.ArenaId" />
+                <label for="Address">Address:</label>
+                <InputText class="form-control" id="Address" @bind-Value="newClient.Address" />
             </div>
             <div class="form-group">
-                <label for="StartHour">Start Hour:</label>
-                <InputNumber class="form-control" id="StartHour" @bind-Value="newTicketType.StartHour" />
+                <label for="Barcode">Barcode:</label>
+                <InputText class="form-control" id="Barcode" @bind-Value="newClient.Barcode" />
             </div>
             <div class="form-group">
-                <label for="EndHour">End Hour:</label>
-                <InputNumber class="form-control" id="EndHour" @bind-Value="newTicketType.EndHour" />
+                <label for="Notes">Notes:</label>
+                <InputTextArea class="form-control" id="Notes" @bind-Value="newClient.Notes" />
             </div>
-            <div class="form-group">
-                <label for="EntriesPerDay">Entries Per Day:</label>
-                <InputNumber class="form-control" id="EntriesPerDay" @bind-Value="newTicketType.EntriesPerDay" />
-            </div>
-            @if (myValidator.Validate(newTicketType).IsValid)
+            @if (myValidator.Validate(newClient).IsValid)
             {
                 <button class="btn btn-primary submit">@(
                         itemSelected ? "Update" : "Submit"
@@ -78,36 +75,38 @@
 
             <span>@addText</span>
         </EditForm>
-        <button class="refresh-table" @onclick="async () => await LoadTicketTypesAsync()">Refresh</button>
+        <button class="refresh-table" @onclick="async () => await LoadClientsAsync()">Refresh</button>
         <span>@refreshText</span>
-        <table class="ticket_types_table">
+        <table class="clients_table">
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Price</th>
-                    <th>ValidityDays</th>
-                    <th>ValidityEntries</th>
+                    <th>Phone</th>
+                    <th>Email</th>
                     <th>IsDeleted</th>
-                    <th>ArenaId</th>
-                    <th>StartHour</th>
-                    <th>EndHour</th>
-                    <th>EntriesPerDay</th>
+                    @*<th>Photo</th>*@
+                    <th>InsertedDate</th>
+                    <th>CNP</th>
+                    <th>Address</th>
+                    <th>Barcode</th>
+                    <th>Notes</th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var ticketType in ticketTypes)
+                @foreach (var client in clients)
                 {
-                    <tr @onclick="(() => HandleItemSelected(ticketType.TicketTypeId))"
-                        class="ticket-type-row @((itemSelected && selectedItemId == ticketType.TicketTypeId ? "selected" : ""))">
-                        <td>@ticketType.Name</td>
-                        <td>@ticketType.Price RON</td>
-                        <td>@ticketType.ValidityDays</td>
-                        <td>@ticketType.ValidityEntries</td>
-                        <td>@ticketType.IsDeleted</td>
-                        <td>@ticketType.ArenaId</td>
-                        <td>@ticketType.StartHour</td>
-                        <td>@ticketType.EndHour</td>
-                        <td>@ticketType.EntriesPerDay</td>
+                    <tr @onclick="(() => HandleItemSelected(client.ClientId))"
+                        class="ticket-type-row @((itemSelected && selectedItemId == client.ClientId ? "selected" : ""))">
+                        <td>@client.Name</td>
+                        <td>@client.Phone</td>
+                        <td>@client.Email</td>
+                        <td>@client.IsDeleted</td>
+                        @*<td>@client.Photo</td>*@
+                        <td>@client.InsertedDate</td>
+                        <td>@client.CNP</td>
+                        <td>@client.Address</td>
+                        <td>@client.Barcode</td>
+                        <td>@client.Notes</td>
                     </tr>
                 }
             </tbody>
@@ -116,12 +115,12 @@
 </Tabs>
 
 @code {
-    private InputValidator<TicketTypes> myValidator = new InputValidator<TicketTypes>();
+    private InputValidator<Clients> myValidator = new InputValidator<Clients>();
     private readonly AdminDbClient adminDbClient = new AdminDbClient(new MyDbContext());
 
-    private List<TicketTypes> ticketTypes = new List<TicketTypes>();
+    private List<Clients> clients = new List<Clients>();
 
-    private TicketTypes newTicketType = new TicketTypes();
+    private Clients newClient = new Clients();
 
     private bool itemSelected = false;
     private int selectedItemId = -1;
@@ -134,18 +133,18 @@
     private int deleteReturnValue = 0;
     private string addText = "";
 
-    private void HandleItemSelected(int ticketTypeId)
+    private void HandleItemSelected(int clientId)
     {
         updateSuccess = false;
         failed = false;
         itemSelected = true;
-        selectedItemId = ticketTypeId;
+        selectedItemId = clientId;
         addText = "";
-        newTicketType = ticketTypes.First(ticket => ticket.TicketTypeId == ticketTypeId);
+        newClient = clients.First(client => client.ClientId == clientId);
 
-        if (newTicketType == null)
+        if (newClient == null)
         {
-            newTicketType = new TicketTypes();
+            newClient = new Clients();
         }
     }
 
@@ -157,7 +156,7 @@
         {
             if (!itemSelected)
             {
-                addReturnValue = await adminDbClient.AddEntity<TicketTypes>(newTicketType);
+                addReturnValue = await adminDbClient.AddEntity<Clients>(newClient);
 
                 if (addReturnValue == 1)
                 {
@@ -174,8 +173,8 @@
                 {
                     throw new ArgumentNullException();
                 }
-                updateReturnValue = await adminDbClient.UpdateEntity<TicketTypes>(selectedItemId, newTicketType);
-                
+                updateReturnValue = await adminDbClient.UpdateEntity<Clients>(selectedItemId, newClient);
+
                 if (updateReturnValue == 1)
                 {
                     updateSuccess = true;
@@ -185,21 +184,25 @@
                     failed = true;
                 }
             }
-
-            
-            //updateSuccess = addReturnValue == 1 ? true : failed = true;
-
-
-            //addText = "Successfully " + (addReturnValue == 1 ? "added!" : updateReturnValue == 1 ? "updated!" : "");
-
-            //if (addReturnValue == -1 || updateReturnValue == -1)
-            //{
-            //    addText = "Failure!";
-            //}
         }
-        await LoadTicketTypesAsync();
+        await ScrollToTop();
+        await LoadClientsAsync();
         itemSelected = false;
-        newTicketType = new TicketTypes();
+        newClient = new Clients();
+        await ClosePopup();
+    }
+
+    private async Task ScrollToTop()
+    {
+        await JSRuntime.InvokeVoidAsync("window.scrollTo", 0, 0);
+    }
+
+    private async Task ClosePopup()
+    {
+        StateHasChanged();
+        await Task.Delay(2000);
+        updateSuccess = false;
+        failed = false;
     }
 
     private async Task HandleDelete()
@@ -219,29 +222,31 @@
         {
             addText = "Failure!";
         }
-        await LoadTicketTypesAsync();
+        await ScrollToTop();
+        await LoadClientsAsync();
         itemSelected = false;
-        newTicketType = new TicketTypes();
+        newClient = new Clients();
+        await ClosePopup();
     }
 
     protected override async Task OnInitializedAsync()
     {
-        await LoadTicketTypesAsync();
+        await LoadClientsAsync();
     }
 
-    private async Task LoadTicketTypesAsync()
+    private async Task LoadClientsAsync()
     {
         refreshText = "Loading...";
         using (var adminDbClient = new AdminDbClient(new MyDbContext()))
         {
-            int act_length = ticketTypes.Count();
+            int act_length = clients.Count();
             bool empty = false;
             if (act_length == 0)
             {
                 empty = true;
             }
-            ticketTypes = await adminDbClient.GetTable<TicketTypes>();
-            if (!empty && ticketTypes.Count() > act_length)
+            clients = await adminDbClient.GetTable<Clients>();
+            if (!empty && clients.Count() > act_length)
             {
                 refreshText = "Successfully loaded new records!";
             }
