--- a/FitnessApp/Pages/ClientsPage.razor.css
+++ b/FitnessApp/Pages/ClientsPage.razor.css
@@ -27,11 +27,18 @@ table {
     font-weight: bold;
 }
 
-.ticket-type-row{
+.ticket-type-row {
     cursor: pointer;
 }
 
 .submit {
     margin-top: 15px;
     margin-right: 10px;
+}
+
+h1 {
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium';
 }
