--- a/FitnessApp/Shared/NavMenu.razor
+++ b/FitnessApp/Shared/NavMenu.razor
@@ -20,13 +20,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ticket_type">
-                <span class="oi oi-plus" aria-hidden="true"></span> New Ticket Type
+                <NavLink class="nav-link" href="ticketTypes">
+                <span class="oi oi-plus" aria-hidden="true"></span> Ticket Types
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> New Ticket Type
+            <NavLink class="nav-link" href="clients">
+                <span class="oi oi-plus" aria-hidden="true"></span> Clients
             </NavLink>
         </div>
 
