--- a/FitnessApp/Pages/ClientsPage.razor.css
+++ b/FitnessApp/Pages/ClientsPage.razor.css
@@ -42,3 +42,8 @@ h1 {
     font-weight: bold;
     font-family: 'Franklin Gothic Medium';
 }
+
+.export {
+    float: right;
+    margin-top: 40px;
+}
