--- a/FitnessApp/Pages/ClientsPage.razor.css
+++ b/FitnessApp/Pages/ClientsPage.razor.css
@@ -47,3 +47,17 @@ h1 {
     float: right;
     margin-top: 40px;
 }
+
+.fade-in {
+    animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
