--- a/FitnessApp/Pages/TicketTypesPage.razor.css
+++ b/FitnessApp/Pages/TicketTypesPage.razor.css
@@ -42,3 +42,21 @@ h1 {
     font-weight: bold;
     font-family: 'Franklin Gothic Medium';
 }
+
+.fade-in {
+    animation: fadeIn 1s;
+}
+
+.fade-in {
+    animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
